--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -121,15 +121,11 @@ jobs:
             *debug*)
               if [[ '${{ matrix.host }}' =~ llvm* ]]; then
                 make build_passes -s -j$NPROC "CMAKE=cmake $LLVM_CMAKE_FLAGS"
-                # FIXME: LLVM CL tests are broken
-                # merge with make call below when fixed
-                make -C cl -s -j$NPROC \
-                    "CMAKE=cmake -D CL_DEBUG=ON $LLVM_CMAKE_FLAGS"
                 patch -p1 < build-aux/llvm.patch
-              else
-                make -C cl -s -j$NPROC "CMAKE=cmake -D CL_DEBUG=ON" check
               fi
 
+              make -C cl -s -j$(nproc) \
+                  "CMAKE=cmake -D CL_DEBUG=ON $LLVM_CMAKE_FLAGS" check
               make -C sl -s -j$NPROC \
                     "CMAKE=cmake -D SL_DEBUG=ON $LLVM_CMAKE_FLAGS" check
               exit 0
@@ -137,14 +133,10 @@ jobs:
             *expensive*)
               if [[ '${{ matrix.host }}' =~ llvm* ]]; then
                 make build_passes -s -j$(nproc) "CMAKE=cmake $LLVM_CMAKE_FLAGS"
-                # FIXME: LLVM CL tests are broken
-                # merge with make call below when fixed
-                make -C cl -s -j$(nproc) "CMAKE=cmake $LLVM_CMAKE_FLAGS"
                 patch -p1 < build-aux/llvm.patch
-              else
-                make -C cl -s -j$(nproc) "CMAKE=cmake" check
               fi
 
+              make -C cl -s -j$(nproc) "CMAKE=cmake $LLVM_CMAKE_FLAGS" check
               make -C sl -s -j$(nproc) \
                   "CMAKE=cmake -D TEST_ONLY_FAST=OFF $LLVM_CMAKE_FLAGS" check
               exit 0
