ci: use macOS 15 images
... because macOS 13 has been deprecated by GitHub.

Related: https://github.blog/changelog/2025-09-19-github-actions-macos-13-runner-image-is-closing-down/

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -28,7 +28,9 @@ jobs:
           - variant: ', variant: debug build'
             host: llvm-debug
 
-    runs-on: macos-13
+    # last supported Intel macOS image:
+    # https://github.blog/changelog/2025-09-19-github-actions-macos-13-runner-image-is-closing-down/
+    runs-on: macos-15-intel
     env:
       CFLAGS: -Werror
       CXXFLAGS: -Werror
